lox_compiler/tests/snapshots/snapshot__snapshots@conditional_and.lox.snap
---
source: lox_compiler/tests/snapshot.rs
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/conditional_and.lox
---
'''
0000    OP_TRUE             
0001    OP_DEFINE_GLOBAL (index=0) "x"
0002    OP_GET_GLOBAL (index=1) "x"
0003    OP_JUMP_IF_FALSE (pos=2)
0004    OP_POP              
0005    OP_FALSE            
0006    OP_DEFINE_GLOBAL (index=2) "bool"
0007    OP_GET_GLOBAL (index=3) "bool"
0008    OP_PRINT            '''
