lox_compiler/tests/snapshots/snapshot__snapshots@conditional_if.lox.snap
---
source: lox_compiler/tests/snapshot.rs
assertion_line: 24
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/conditional_if.lox
---
'''
0000    OP_FALSE            
0001    OP_DEFINE_GLOBAL (index=0) x
0002    OP_GET_GLOBAL (index=1) x
0003    OP_JUMP_IF_FALSE (pos=3)
0004    OP_POP              
0005    OP_CONST (index=2) x
0006    OP_PRINT            
0007    OP_POP              '''
