lox_compiler/tests/snapshots/snapshot__snapshots@function_def.lox.snap
---
source: lox_compiler/tests/snapshot.rs
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/function_def.lox
---
'''
0000    OP_CLOSURE (index=0)
0001    OP_DEFINE_GLOBAL (index=1) add10
FN_DEF (index=0): (add10)
0000    OP_GET_LOCAL (index=1)
0001    OP_CONST (index=0) 10
0002    OP_ADD              
0003    OP_RETURN           '''
