lox_compiler/tests/snapshots/snapshot__snapshots@global_variable.lox.snap
---
source: lox_compiler/tests/snapshot.rs
assertion_line: 24
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/global_variable.lox
---
'''
0000    OP_CONST (index=0) beignets
0001    OP_DEFINE_GLOBAL (index=1) breakfast
0002    OP_CONST (index=2) cafe au lait
0003    OP_DEFINE_GLOBAL (index=3) beverage
0004    OP_CONST (index=4) beignets with 
0005    OP_GET_GLOBAL (index=5) beverage
0006    OP_ADD              
0007    OP_SET_GLOBAL (index=6) breakfast
0008    OP_POP              
0009    OP_GET_GLOBAL (index=7) breakfast
0010    OP_PRINT            '''
