lox_compiler/tests/snapshots/snapshot__snapshots@while.lox.snap
---
source: lox_compiler/tests/snapshot.rs
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/while.lox
---
'''
0000    OP_CONST (index=0) 0
0001    OP_DEFINE_GLOBAL (index=1) "i"
0002    OP_GET_GLOBAL (index=2) "i"
0003    OP_CONST (index=3) 5
0004    OP_LESS             
0005    OP_JUMP_IF_FALSE (pos=9)
0006    OP_POP              
0007    OP_GET_GLOBAL (index=4) "i"
0008    OP_PRINT            
0009    OP_GET_GLOBAL (index=5) "i"
0010    OP_CONST (index=6) 1
0011    OP_ADD              
0012    OP_SET_GLOBAL (index=7) "i"
0013    OP_POP              
0014    OP_LOOP (pos=-13)   
0015    OP_POP              '''
