lox_compiler/tests/snapshots/snapshot__snapshots@while_as_for.lox.snap
---
source: lox_compiler/tests/snapshot.rs
expression: run_test(path)
input_file: lox_compiler/tests/fixtures/while_as_for.lox
---
'''
0000    OP_CONST (index=0) 3
0001    OP_DEFINE_GLOBAL (index=1) "x"
0002    OP_CONST (index=2) 0
0003    OP_SET_LOCAL (index=0)
0004    OP_GET_LOCAL (index=0)
0005    OP_GET_GLOBAL (index=3) "x"
0006    OP_LESS             
0007    OP_JUMP_IF_FALSE (pos=9)
0008    OP_POP              
0009    OP_GET_LOCAL (index=0)
0010    OP_PRINT            
0011    OP_GET_LOCAL (index=0)
0012    OP_CONST (index=4) 1
0013    OP_ADD              
0014    OP_SET_LOCAL (index=0)
0015    OP_POP              
0016    OP_LOOP (pos=-13)   
0017    OP_POP              
0018    OP_POP              '''
